--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -194,7 +194,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: 20px;
+  width: 40px;
   height: 100vh;
   z-index: 997;
 }
